fix contrast text

--- a/assets/src/style.scss
+++ b/assets/src/style.scss
@@ -5,6 +5,7 @@ $base-color-first: #313c4e;
 $base-color-second: #222a33;
 $base-color-third: #449399;
 $base-color-fourth: #fff;
+$base-color-fifth: #77E4A6;
 
 $font-size: 18px;
 
@@ -147,7 +148,7 @@ body {
   }
 
   .title {
-    color: $base-color-third;
+    color: $base-color-fifth;
     font-size: 1.5em;
     text-transform: capitalize;
     font-weight: bold;
@@ -168,7 +169,7 @@ body {
     max-height: 200px;
     width: 100%;
     height: 100%;
-    border: 5px solid $base-color-third;
+    border: 5px solid $base-color-fifth;
     border-radius: 50%;
     position: relative;
     transition: border 5s;
